--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,6 +14,8 @@
                 <li><a href="/about">About</a></li>
                 <li><a href="/error">Error</a></li>
                 <li><a href="/uploadData?msg=answer to everything&id=42">uploadData</a></li>
+                <li><a href="/tvshows">Tv Shows</a></li>
+                <li><a href="/movies">Movies</a></li>
             </ul>
         </div>
     
