--- a/views/pages/tvshows.ejs
+++ b/views/pages/tvshows.ejs
@@ -14,10 +14,14 @@
     
             <div class="jumbotron">
                 <h3>My Favorite TV Shows!</h3>
-                <p> <%= val1 %></p>
-                <p> <%= val2 %></p>
-                <p> <%= val3 %></p>
-                <p> <%= val4 %></p>
+                <ul>
+                    <li><%= val1 %><</li> 
+                    <li><%= val2 %><</li> 
+                    <li><%= val3 %><</li> 
+                    <li><%= va14 %><</li> 
+                 
+                </ul>
+              
             </div>
     
     </div>
