--- a/views/pages/tvshows.ejs
+++ b/views/pages/tvshows.ejs
@@ -18,7 +18,7 @@
                     <li><%= val1 %><</li> 
                     <li><%= val2 %><</li> 
                     <li><%= val3 %><</li> 
-                    <li><%= va14 %><</li> 
+                    <li><%= val4 %><</li> 
                  
                 </ul>
               
