--- a/views/pages/tvshows.ejs
+++ b/views/pages/tvshows.ejs
@@ -15,10 +15,10 @@
             <div class="jumbotron">
                 <h3>My Favorite TV Shows!</h3>
                 <ul>
-                    <li><%= val1 %><</li> 
-                    <li><%= val2 %><</li> 
-                    <li><%= val3 %><</li> 
-                    <li><%= val4 %><</li> 
+                    <li><%= val1 %></li> 
+                    <li><%= val2 %></li> 
+                    <li><%= val3 %></li> 
+                    <li><%= val4 %></li> 
                  
                 </ul>
               
