--- a/views/pages/movies.ejs
+++ b/views/pages/movies.ejs
@@ -13,13 +13,12 @@
     <div class="row">
     
             <div class="jumbotron">
-                <h3>My Favorite TV Shows:</h3>
+                <h3>Top Four Favorite Movies:</h3>
                 <ul>
                     <li><%= val1 %></li> 
                     <li><%= val2 %></li> 
                     <li><%= val3 %></li> 
                     <li><%= val4 %></li> 
-                 
                 </ul>
               
             </div>
@@ -32,3 +31,7 @@
     
     </body>
     </html>
+  
+
+
+
