--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,24 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: #fff1f1;
 }
 
-a {
-  color: #00B7FF;
+h1 {
+  color: #A75353;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  border: 3px solid #5b1212;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+li {
+  color: #CE8585;
+  text-align: center;
+  padding: 5px 10px;
+  background-color: #fff1f1;
 }
